--- a/manual/quick-start-tutorial.html
+++ b/manual/quick-start-tutorial.html
@@ -82,16 +82,16 @@ pm.pride.util.generator.EntityGenerator CUSTOMER quickstart.Customer &gt; Custom
     public static final String COL_NAME = &quot;name&quot;;
     public static final String COL_FIRST_NAME = &quot;first_name&quot;;
 
-    protected static final RecordDescriptor red = new RecordDescriptor
-        (Customer.class, TABLE, null, new String[][] {
-            { COL_ID,   &quot;getId&quot;,   &quot;setId&quot; },
-            { COL_NAME,   &quot;getName&quot;,   &quot;setName&quot; },
-            { COL_FIRST_NAME,   &quot;getFirstName&quot;,   &quot;setFirstName&quot; },
-        });
+    protected static final RecordDescriptor red =
+      new RecordDescriptor(Customer.class, TABLE, null)
+        .row(COL_ID, &quot;getId&quot;, &quot;setId&quot;)
+        .row(COL_NAME, &quot;getName&quot;, &quot;setName&quot;)
+        .row(COL_FIRST_NAME, &quot;getFirstName&quot;, &quot;setFirstName&quot;);
 
     public RecordDescriptor getDescriptor() { return red; }
 
-    private static String[] keyFields = new String[] { COL_ID };
+    private static String[] keyFields =
+      new String[] { COL_ID };
     public String[] getKeyFields() { return keyFields; }
 
     private long id;
