--- a/manual/entity-inheritance.html
+++ b/manual/entity-inheritance.html
@@ -42,12 +42,10 @@ CUSTOMER(ID) inherit.AbstractHybrid &gt; AbstractHybrid.java</code></pre>
 
     protected static final RecordDescriptor red =
       new RecordDescriptor(AbstractHybrid.class, null, null)
-            .row( COL_ID, &quot;getId&quot;, &quot;setId&quot; );
+            .row( COL_ID, &quot;getId&quot;, &quot;setId&quot; )
+            .key( COL_ID );
 
     public RecordDescriptor getDescriptor() { return red; }
-
-    private static String[] keyFields = new String[] { COL_ID };
-    public String[] getKeyFields() { return keyFields; }
 
     private int id;
 
@@ -57,7 +55,7 @@ CUSTOMER(ID) inherit.AbstractHybrid &gt; AbstractHybrid.java</code></pre>
     // Re-constructor
     public AbstractHybrid(int id) throws SQLException {
         setId(id);
-        findx();
+        findXE();
     }
 
     public AbstractHybrid() {}
@@ -81,12 +79,10 @@ CUSTOMER inherit.DerivedCustomer
     protected static final RecordDescriptor red =
       new RecordDescriptor(DerivedCustomer.class, TABLE, inherit.AbstractHybrid.red)
         .row(COL_NAME, &quot;getName&quot;, &quot;setName&quot;)
-        .row(COL_FIRST_NAME, &quot;getFirstName&quot;, &quot;setFirstName&quot;);
+        .row(COL_FIRST_NAME, &quot;getFirstName&quot;, &quot;setFirstName&quot;)
+        .key( COL_ID );
 
     public RecordDescriptor getDescriptor() { return red; }
-
-    private static String[] keyFields = new String[] { COL_ID };
-    public String[] getKeyFields() { return keyFields; }
 
     private String name;
     private String firstName;
@@ -110,7 +106,8 @@ CUSTOMER inherit.DerivedCustomer
 <li>The class is not abstract and is derived from AbstractEntity</li>
 <li>It contains only the attributes and corresponding getters and setters for the name and first name column.</li>
 <li>The RecordDescriptor contains only mappings for these attributes and refers to the RecordDescriptor from the base class. The complete mapping for the CUSTOMER table is assembled from both descriptors.</li>
-<li>The re-constructor doesn’t call the findx() method but the super re-constructor from AbstractEntity instead which already does the find job. The base class will consider <em>all</em> the mappings because the derived class overrides the methods getDescriptor() and getKeyFields().</li>
+<li>The primary key is re-defined, just in case the derived class adds additional key columns over the inherited ones (which is not the case here).</li>
+<li>The re-constructor doesn’t call the findXE() method but the super re-constructor from AbstractEntity instead which already does the find job. The base class will consider <em>all</em> the mappings because the derived class overrides the method getDescriptor().</li>
 </ul>
 <p>The resulting DerivedCustomer class behaves exactly like the Customer class from the <a href="quick-start-tutorial.html">Quick Start Tutorial</a>. You can check that by running the <a href="https://github.com/j-pride/manual-example-code/blob/master/src/main/java/quickstart/CustomerClient.java">CustomerClient</a> from the quick start tutorial in parallel with the equivalent <a href="https://github.com/j-pride/manual-example-code/blob/master/src/main/java/inherit/DerivedCustomerClient.java">DerivedCustomerClient</a> from the package <a href="https://github.com/j-pride/manual-example-code/tree/master/src/main/java/inherit">inherit</a>. Both have the same functionality and operate on the same table but work with the two different entity representations. This reveals an important fact about PriDE’s concept how inheritance is mapped to SQL where you don’t find such a concept. In terms of JPA, PriDE follows the <a href="https://en.wikibooks.org/wiki/Java_Persistence/Inheritance#Example_table_per_class_inheritance_tables_in_database">table-per-class strategy</a>. For every non-abstract class in the hierarchy there must exist a database table with columns for <em>all</em> mapped attributes of the class itself and <em>all</em> its super classes.</p>
 <h2 id="inheritance-with-separate-adapters">Inheritance with separate adapters</h2>
