--- a/manual/quick-start-tutorial.html
+++ b/manual/quick-start-tutorial.html
@@ -86,13 +86,10 @@ pm.pride.util.generator.EntityGenerator CUSTOMER quickstart.Customer &gt; Custom
       new RecordDescriptor(Customer.class, TABLE, null)
         .row(COL_ID, &quot;getId&quot;, &quot;setId&quot;)
         .row(COL_NAME, &quot;getName&quot;, &quot;setName&quot;)
-        .row(COL_FIRST_NAME, &quot;getFirstName&quot;, &quot;setFirstName&quot;);
+        .row(COL_FIRST_NAME, &quot;getFirstName&quot;, &quot;setFirstName&quot;)
+        .key(COL_ID);
 
     public RecordDescriptor getDescriptor() { return red; }
-
-    private static String[] keyFields =
-      new String[] { COL_ID };
-    public String[] getKeyFields() { return keyFields; }
 
     private long id;
     private String name;
@@ -112,7 +109,7 @@ pm.pride.util.generator.EntityGenerator CUSTOMER quickstart.Customer &gt; Custom
     // Reconstructor
     public Customer(long id) throws SQLException {
         setId(id);
-        find();
+        findXE();
     }
 
     public Customer() {}
