locking chapter added to manual

--- a/manual/joins.html
+++ b/manual/joins.html
@@ -178,7 +178,7 @@ c.joinQuery(customerJoinedWithAddress, onlyLondon);</code></pre>
 <p>You have seen a lot of different ways now to express table joins in PriDE. Finally it is important to mentioned that the class JoinRecordDescriptor is not restricted in the number of tables to join. You may chain the calls of join() and leftJoin() as ofter as needed. So happy joining :-)</p>
 <div class="subpage-navigation">
 <p>
-<a id="prev" href="sql-expression-builder.html"> Prev.</a>
+<a id="prev" href="sql-expression-builder.html"> Prev.</a> | <a id="next" href="optimisticpessimistic-locking.html">Next </a>
 </p>
 </div>
 				</div>
