--- a/manual.html
+++ b/manual.html
@@ -74,6 +74,10 @@
 <li><a href="#entity-composition">Entity Composition</a></li>
 <li><a href="#ad-hoc-joins">Ad-hoc Joins</a></li>
 </ul></li>
+<li><a href="#optimisticpessimistic-locking">Optimistic/Pessimistic Locking</a><ul>
+<li><a href="#optimistic-locking">Optimistic Locking</a></li>
+<li><a href="#pessimistic-locking">Pessimistic Locking</a></li>
+</ul></li>
 </ul>
 </nav>
 <h1 id="about-pride">About PriDE</h1>
@@ -97,7 +101,6 @@
 <li>build the project using Maven (<code>mvn clean compile</code>)</li>
 </ul>
 <p>At January 2019, the PriDE 3 manual is work in progress. Beside the core chapters above there are chapters coming soon for the following aspects</p>
-<h4 id="optimistic-locking">Optimistic Locking</h4>
 <h4 id="jse-jee-and-resourceaccessor">JSE, JEE, and ResourceAccessor</h4>
 <h4 id="multiple-databases">Multiple Databases</h4>
 <h4 id="mass-operations">Mass Operations</h4>
@@ -542,7 +545,7 @@ paddy.commit();</code></pre>
 <p>Note that the code above is based on a hybrid entity and does <em>not</em> use the re-constructor which would immediately initiate a find operation. Entities don’t have to be loaded before deletion. Just like updates, every deletion returns the number of affected rows and it’s up to you if you check the result.</p>
 <p>There is a deleteByExample() method available which allows to specify a different set of key attributes and usually deletes multiple records at once. More complicated multi-record deletions can be performed by the sqlUpdate() method of the Database class similar to the example section <a href="#update">Update</a>.</p>
 <h1 id="entity-inheritance">Entity Inheritance</h1>
-<p>From a technical point of view, entity inheritance is of interest to encapsulate basic design concepts in a base class which should apply to various entity types in the same way. The chapter <a href="#find-and-query">Find and Query</a> already mentioned a few examples like a default public clone() method and a toString() method. Another typical reason is a stereotype set of table rows which should be present in each table like an auto-incremented technical ID, a creation time and a last modification time, or a lock counter for concurrency control by <a href="#optimistic-locking">optimistic locking</a>.</p>
+<p>From a technical point of view, entity inheritance is of interest to encapsulate basic design concepts in a base class which should apply to various entity types in the same way. The chapter <a href="#find-and-query">Find and Query</a> already mentioned a few examples like a default public clone() method and a toString() method. Another typical reason is a stereotype set of table rows which should be present in each table like an auto-incremented technical ID, a creation time and a last modification time, or a lock counter for concurrency control by <a href="#optimistic-pessimistic-locking">optimistic locking</a>.</p>
 <p>As a simple example for inheritance, you can split up the Customer entity in a way that the ID is encapsulated in a separate entity class IdentifiedEntity which the Customer entity is derived from. This is based on the assumption that all entity classes should have a unique ID row which is a wide-spread concept.</p>
 <p>Inheritance in PriDE is a bit inconvenient as you have to maintain more than one inheritance hierarchy. However, new tables and entities don’t shoot like mushrooms out of the ground, so there’s no reason to bother. Beside the entities, you also have to relate both entities’ descriptors, and if you are working with separate adapters, the adapter classes have to be derived from each other too. As long as you are using 1:1 mappings, you can let PriDE’s entity generator do most of the job. So here is how to generate the little inheritance hierarchy which you can find in package <a href="https://github.com/j-pride/manual-example-code/tree/master/src/main/java/inheritance">inheritance</a> in the PriDE manual examples source code repository on <a href="https://github.com/j-pride/manual-example-code">GitHub</a>. You start with generating the base class. As the generator is based on table structures in a database and there is no such concept like “base classes” in SQL, you must ensure that the CUSTOMER table is already present (resp. any other table following the same pattern with a technical ID) . To generate a class which does not map all the columns, you specify the columns of interest as comma-separated list along with the table name when calling the generator:</p>
 <pre><code>java
@@ -855,6 +858,48 @@ WhereCondition onlyLondon =
 c.joinQuery(customerJoinedWithAddress, onlyLondon);</code></pre>
 <p>The method joinQuery() accepts every record descriptor which is compatible with the entity’s own descriptor in the sense that it maps to the same entity type.</p>
 <p>You have seen a lot of different ways now to express table joins in PriDE. Finally it is important to mentioned that the class JoinRecordDescriptor is not restricted in the number of tables to join. You may chain the calls of join() and leftJoin() as ofter as needed. So happy joining :-)</p>
+<h1 id="optimisticpessimistic-locking">Optimistic/Pessimistic Locking</h1>
+<p>Locking for concurrency control is not directly addressed by PriDE but can be achieved by simple patterns. Usually, the object locking strategy of an application is a more general design decision and nothing you decide individually for every single table / entity. The examples in the section therefore demonstrate pattern which can be encapsulated in base classes and need to be implemented only once.</p>
+<p>This manual will not go into details about what kind of locking to prefer over the other for which kind of business requirements. There lots of general introductions on concurrency control on the Internet, e.g. on <a href="https://en.wikipedia.org/wiki/Concurrency_control">Wikipedia</a>.</p>
+<h2 id="optimistic-locking">Optimistic Locking</h2>
+<p><a href="https://en.wikipedia.org/wiki/Optimistic_concurrency_control">Optimistic Locking</a> is a typical concept for the management of concurrent update access from multiple applications on the same record in a database. An update of an existing record is only performed if it has not been modified by someone else since the current application has read the record of interest from the DB the last time. If it was modified, the caller is informed about a concurrent access conflict. The concept requires a version counter in the table. Every update operation increments this version counter and performs the actual update only if the entity’s version counter value in memory is still the same as in the database.</p>
+<p>Optimistic locking only makes sense for single-record updates by primary key, so the essential aspect of the pattern is to override the update() method of an adapter class resp. a hybrid entity.</p>
+<p>The CUSTOMER table being used in almost all the manual examples, can be equipped for optimistic locking, by adding an appropriate counter:</p>
+<pre><code>create table LOCKABLECUSTOMER (
+    id integer not null primary key,
+    name varchar(20),
+    first_name varchar(30),
+    version integer not null
+);</code></pre>
+<p>The resulting entity class gets an appropriate attribute int version; and the entity’s update() method must be overridden like that:</p>
+<pre><code>@Override
+public int update() throws SQLException {
+    version++;
+    int numRows = update(where().and(COL_VERSION, version-1)); 
+    if (numRows == 0) {
+        version--;
+        throw new SQLException(&quot;optimistic lock error&quot;);
+    }
+    return numRows; 
+}</code></pre>
+<p>The update() method without parameters is the update by primary primary key, and the override above works as follows:</p>
+<ul>
+<li>The version number is incremented by 1 in the entity before actually updating the DB. So if the update goes through, the version number will also be incremented in the database.</li>
+<li>The where() call without parameters assembles a WhereCondition from the entity’s primary key attributes.</li>
+<li>The appended and() call extends the condition by a constraint that - beside the primary key - also the version number in the DB must match the former value.</li>
+<li>The method then calls an update() method with the extended WhereCondition and checks the number of affected rows.</li>
+<li>If the version number was already incremented in the database, the number of affected rows is 0 and the method reports an error. The version number is restored, just in case the application can handle the exception and works on with the entity. If your application is actually this robust, you should consider defining your own optimistic lock exception type to make this case easy to distinguish from other DB problems.</li>
+</ul>
+<p>The code may be well encapsulated in a base class for all entity types which require optimistic locking. You can find an appropriate <a href="https://github.com/j-pride/manual-example-code/blob/master/src/main/java/locks/OptimisticObject.java">base class</a> and derived <a href="https://github.com/j-pride/manual-example-code/blob/master/src/main/java/locks/OptimisticCustomer.java">OptimisticCustomer</a> class in package <a href="https://github.com/j-pride/manual-example-code/tree/master/src/main/java/locks">locks</a> of the PriDE manual source code repository on GitHub.</p>
+<h2 id="pessimistic-locking">Pessimistic Locking</h2>
+<p>In SQL databases, pessimistic locking is usually achieved by selecting-for-update operations. I.e. instead of overriding the update() method, pessimistic locking requires to override the find() method without parameters. Like the update() method without parameters, find() addresses the entity’s primary key and therefore is a single-record operation. As a difference to optimistric locking, it does not require any additional columns to organize the locking, However, it requires the database to actually support select-for-update which is sometimes not the case for server-less databases. SQLite e.g. doesn’t support select-for-update as any manipulative DB operates always locks the whole database.</p>
+<p>The following override will do the job:</p>
+<pre><code>@Override
+public boolean find() throws SQLException {
+    return find(where().forUpdate());
+}</code></pre>
+<p>As you already from the optimistic locking example, the method where() assembles a selection criterion based on the entity’s primary key attributes. The appended call of forUpdate() adds the required “… FOR UPDATE” to the constraint which then is used to call the find() method accepting a WhereCondition.</p>
+<p>Keep in mind that there are a few more find() methods which you may have to override. Method findXE() is based on find(), so it doesn’t need an extra override, but findRC() e.g. has its own implementation. The overrides can be well encapsulated in a base class for all entity types which require pessimistic locking. You can find an appropriate <a href="https://github.com/j-pride/manual-example-code/blob/master/src/main/java/locks/PessimisticObject.java">base class</a> and derived <a href="https://github.com/j-pride/manual-example-code/blob/master/src/main/java/locks/PessimisticCustomer.java">PessimisticCustomer</a> class in package <a href="https://github.com/j-pride/manual-example-code/tree/master/src/main/java/locks">locks</a> of the PriDE manual source code repository on GitHub.</p>
 				</div>
 			</section>
 
