--- a/manual/pride-3-user-manual.html
+++ b/manual/pride-3-user-manual.html
@@ -36,6 +36,7 @@
 <p><a href="entity-inheritance.html">Entity Inheritance</a></p>
 <p><a href="sql-expression-builder.html">SQL Expression Builder</a></p>
 <p><a href="joins.html">Joins</a></p>
+<p><a href="optimisticpessimistic-locking.html">Optimistic/Pessimistic Locking</a></p>
 <div class="subpage-navigation">
 <p>
 <a id="next" href="about-pride.html">Next </a>
