Resource accessors explained

--- a/manual/optimisticpessimistic-locking.html
+++ b/manual/optimisticpessimistic-locking.html
@@ -74,7 +74,7 @@ public boolean find() throws SQLException {
 <p>Keep in mind that there are a few more find() methods which you may have to override. Method findXE() is based on find(), so it doesn’t need an extra override, but findRC() e.g. has its own implementation. The overrides can be well encapsulated in a base class for all entity types which require pessimistic locking. You can find an appropriate <a href="https://github.com/j-pride/manual-example-code/blob/master/src/main/java/locks/PessimisticObject.java">base class</a> and derived <a href="https://github.com/j-pride/manual-example-code/blob/master/src/main/java/locks/PessimisticCustomer.java">PessimisticCustomer</a> class in package <a href="https://github.com/j-pride/manual-example-code/tree/master/src/main/java/locks">locks</a> of the PriDE manual source code repository on GitHub.</p>
 <div class="subpage-navigation">
 <p>
-<a id="prev" href="joins.html"> Prev.</a>
+<a id="prev" href="joins.html"> Prev.</a> | <a id="next" href="jse-jee-and-resourceaccessor.html">Next </a>
 </p>
 </div>
 				</div>
