multi database chapter added to manuel

--- a/manual/jse-jee-and-resourceaccessor.html
+++ b/manual/jse-jee-and-resourceaccessor.html
@@ -79,7 +79,7 @@ DatabaseFactory.setResourceAccessor(re);</code></pre>
 </ul>
 <div class="subpage-navigation">
 <p>
-<a id="prev" href="optimisticpessimistic-locking.html"> Prev.</a>
+<a id="prev" href="optimisticpessimistic-locking.html"> Prev.</a> | <a id="next" href="multiple-databases.html">Next </a>
 </p>
 </div>
 				</div>
