--- a/manual/pride-3-user-manual.html
+++ b/manual/pride-3-user-manual.html
@@ -38,6 +38,7 @@
 <p><a href="joins.html">Joins</a></p>
 <p><a href="optimisticpessimistic-locking.html">Optimistic/Pessimistic Locking</a></p>
 <p><a href="jse-jee-and-resourceaccessor.html">JSE, JEE, and ResourceAccessor</a></p>
+<p><a href="multiple-databases.html">Multiple Databases</a></p>
 <div class="subpage-navigation">
 <p>
 <a id="next" href="about-pride.html">Next </a>
