--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 							<a href="manual.pdf">PDF download</a>
 						</div>
 						<div class="feature">
-							<i class="fa fa-download"></i>
+							<a href="https://search.maven.org/search?q=pm.pride"><i class="fa fa-download"></i></a>
 							<h3>Download</h3>
-							<p>Download binary releases from Sourceforge. Sources are available at GitHub</p>
+							<p>Download latest releases from Maven Central</p>
 						</div>
 						<div class="feature">
 							<i class="fa fa-road"></i>
