--- a/manual.html
+++ b/manual.html
@@ -83,6 +83,9 @@
 <li><a href="#jee">JEE</a></li>
 <li><a href="#accessor-configuration">Accessor Configuration</a></li>
 </ul></li>
+<li><a href="#multiple-databases">Multiple Databases</a><ul>
+<li><a href="#multi-database-transactions">Multi-Database Transactions</a></li>
+</ul></li>
 </ul>
 </nav>
 <h1 id="about-pride">About PriDE</h1>
@@ -106,7 +109,6 @@
 <li>build the project using Maven (<code>mvn clean compile</code>)</li>
 </ul>
 <p>At January 2019, the PriDE 3 manual is work in progress. Beside the core chapters above there are chapters coming soon for the following aspects</p>
-<h4 id="multiple-databases">Multiple Databases</h4>
 <h4 id="mass-operations">Mass Operations</h4>
 <h4 id="calling-stored-procedures">Calling Stored Procedures</h4>
 <h4 id="pride-design-principles">PriDE Design Principles</h4>
@@ -950,6 +952,36 @@ DatabaseFactory.setResourceAccessor(re);</code></pre>
 <li><p><code>pride.systime = 1000230</code></p>
 <p>Specifies a UNIX milliseconds time value which is used to represent the current database server time. Where ever the application uses this value in a database operation it is replaced by an appropriate server expression to address the current time. E.g. in Oracle databases this is SYSDATE, in SQLite it is a call of the strftime() server function. The application can access this special value for the current database by calling SQL.systime(). The default value is January 1. of year 0 which should hopefully not clash with any “real” date value which the application’s business logic works with. So usually you don’t have to change the value :-)</p></li>
 </ul>
+<h1 id="multiple-databases">Multiple Databases</h1>
+<p>You may access multiple databases in an application, using PriDE’s concept of a <em>database context</em>. As long as you don’t explicitly address particular contexts, you are implicitly working with a default context. If you recall the chapter about <a href="#jse-jee-and-resourceaccessor">resource accessors</a> and the the application bootstrap, there appeared two calls which initialized the default context:</p>
+<pre><code>DatabaseFactory.setDatabaseName(...)
+DatabaseFactory.setResourceAccessor(...);</code></pre>
+<p>If you want to work with multiple databases, you have to initialize multiple contexts in the bootstrap in the same manner. The contexts are addressed by name and you perform a context switch by calling the DatabaseFactory’s static method setContext(). Switching to a context which doesn’t yet exist, causes the context to be created.</p>
+<pre><code>// Initialize the default database context
+DatabaseFactory.setDatabaseName(...)
+DatabaseFactory.setResourceAccessor(...);
+
+// Create a new context by switching
+DatabaseFactory.setContext(&quot;other-db&quot;);
+
+// Initialize the new context
+DatabaseFactory.setDatabaseName(...)
+DatabaseFactory.setResourceAccessor(...);
+
+// Switch back to the default context
+DatabaseFactory.setContext(DatabaseFactory.DEFAULT_CONTEXT);</code></pre>
+<p>Alternatively you can add a context without switching back and forth by calling method addContext().</p>
+<p>There are two ways how to work with these contexts:</p>
+<ul>
+<li><p>By explicit context switching as demonstrated above which will cause subsequent database operations to operate on the current context. As context switching is a global configuration change, this is only suitable for applications without concurrent access by multiple users, e.g. fat clients or batch applications. You should never use that in a server application.</p></li>
+<li><p>By associating entity types to different contexts. This is achieved by a call of the context() method when constructing the appropriate RecordDescriptor</p>
+<pre><code>new RecordDescriptor(...)
+    .context(&quot;other-db&quot;);</code></pre>
+<p>All database operations that are based on that record descriptor will operate on the associated context. A global context switch is not required for that, so this concept will also work in server applications. Usually this is also the more convenient variant. However, if you make use of this, make sure that your application either doesn’t call context-dependent static methods of the DatabaseFactory class or that it is using them safely. Earlier chapters of this manual introduced the method call DatabaseFactory.getDatabase() to get access to a lower operation level. This call returns a Database object form the <em>current context</em> which of course may be the wrong one if you don’t switch it. In a multi-database server application you should rather call the alternative getDatabase(String) method which gets passed a context name.</p></li>
+</ul>
+<h2 id="multi-database-transactions">Multi-Database Transactions</h2>
+<p>Although SQL database usually provide very good transaction safety for their own, the transaction management across <em>multiple</em> independent databases is a separate challenge. If your are working in a JEE environment, the application server should provide a safe transaction coordination for the involved databases, e.g. a <a href="https://en.wikipedia.org/wiki/Two-phase_commit_protocol">2 phase commit protocol</a>. In a JSE environment you either have to integration a transaction manager like <a href="https://www.atomikos.com/">Atomikos</a> or follow design patterns that minimize the risk of data inconsistencies.</p>
+<p>A recommended design pattern is the so-called <em>best efforts 1 phase commit</em>. If you have to perform modifications in multiple databases within one transaction then do the actual work in all involved databases first and at the very end, run the commit calls for all databases. I.e. inconsistencies can only occur if any of the commit calls should fail which is a very rare situation. The pattern is suitable not only for databases but can be applied to any combined usage of transactional resources. In that case you should start the sequence of commit calls with the resource with the highest failure risk. E.g. you may assume that committing a JMS queue or a Kafka topic has a higher failure risk than committing a transaction on an Oracle database server based on decades of experience and hardening.</p>
 				</div>
 			</section>
 
