Chapters for prepared operations and attribute type mapping added

--- a/manual/about-pride.html
+++ b/manual/about-pride.html
@@ -49,8 +49,7 @@
 <li>clone the repository (<code>git clone https://github.com/j-pride/manual-example-code.git</code>) and</li>
 <li>build the project using Maven (<code>mvn clean compile</code>)</li>
 </ul>
-<p>At January 2019, the PriDE 3 manual is work in progress. Beside the core chapters above there are chapters coming soon for the following aspects</p>
-<h4 id="mass-operations">Mass Operations</h4>
+<p>At March 2019, the PriDE 3 manual is still work in progress. Beside the core chapters above there are chapters coming soon for the following aspects</p>
 <h4 id="calling-stored-procedures">Calling Stored Procedures</h4>
 <h4 id="pride-design-principles">PriDE Design Principles</h4>
 <p>A good information source for features which are not yet covered by this manual are PriDE’s unit tests which you can find on <a href="https://github.com/j-pride/pride.pm/tree/master/src/test/java/basic">GitHub</a>. You may also consult the manual from PriDE version 2 which is available on <a href="http://pride.sourceforge.net/PriDE.html">SourceForge</a>.</p>
